# ACADOS_NMPC_ROS

./: CMakeLists.txt  README.md  acados.sh  package.xml
config/: jackal_params.cfg  ros_parameters.yaml
include/: MPC_Tracking.h  ROS_Node.h  types_lib.h
launch/: set_weight.launch  tracking_env.launch
msg/: JackalState.msg  JackalStateStamped.msg  StampedModelStates.msg
rviz/: jackal.rviz
scripts/: acados_ocp_nlp.json  acados_solver.json  create_ocp.py  create_ocp_2.py  create_solver.py  create_solver_2.py  create_solver_3.py  robot_model.py  robot_model_2.py  simulation.py  simulation_2.py
scripts/c_generated_code/: Makefile  acados_sim_solver_jackal.c  acados_sim_solver_jackal.h  acados_solver.pxd  acados_solver_jackal.c  acados_solver_jackal.h  main_jackal.c  main_sim_jackal.c
scripts/c_generated_code/jackal_cost/: jackal_cost.h  jackal_cost_y_0_fun.c  jackal_cost_y_0_fun_jac_ut_xt.c  jackal_cost_y_0_hess.c  jackal_cost_y_e_fun.c  jackal_cost_y_e_fun_jac_ut_xt.c  jackal_cost_y_e_hess.c  jackal_cost_y_fun.c  jackal_cost_y_fun_jac_ut_xt.c  jackal_cost_y_hess.c
scripts/c_generated_code/jackal_model/: jackal_expl_ode_fun.c  jackal_expl_vde_adj.c  jackal_expl_vde_forw.c  jackal_model.h
scripts/print_c/: plot.py  results.csv
src/MPC_Tracking_node/: MPC_Tracking.cpp  MPC_Tracking_node.cpp  main.cpp
src/mpc_acados_node/: mpc_acados_node.cpp  test_solver.cpp
src/utils/: model_state_stamper.cpp  trajectory_publisher.cpp
